fix overflow of sights show

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -791,3 +791,4 @@ text-align: right;}
 #visa_bg_image img{position:absolute; right:-20px; width:100%; top:-70px}
 .new_form_general_class {margin-top:100px}
 .agency-name {margin-top:10px}
+.tour-details .col-xs-5 {overflow:hidden}
